Fixed the header drop shadow and cleaned up z-indexing

--- a/sarahhkeast_portfolio/src/styles/components/header.scss
+++ b/sarahhkeast_portfolio/src/styles/components/header.scss
@@ -14,7 +14,7 @@
     }
 
     &--shadow {
-        box-shadow: 1px 4px 8px $color-grey-border;
+        box-shadow: 1px 4px 8px $color-grey-shadow;
     }
 
     &__text-container {
