--- a/sarahhkeast_portfolio/src/styles/components/menu-modal.scss
+++ b/sarahhkeast_portfolio/src/styles/components/menu-modal.scss
@@ -4,7 +4,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 2;
+    z-index: 4;
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -32,7 +32,7 @@
         width: 100%;
         z-index: 10;
         border-bottom: 1px solid $color-grey-border;
-        box-shadow: 1px 4px 8px $color-grey-border;
+        box-shadow: 1px 4px 8px $color-grey-shadow;;
     }
 
     &__close-button-container {
