--- a/sarahhkeast_portfolio/src/styles/variables.scss
+++ b/sarahhkeast_portfolio/src/styles/variables.scss
@@ -2,6 +2,7 @@
 $color-white: #FFFFFF;
 $color-grey-background: #f8f8f8;
 $color-grey-border: #e9e9e9;
+$color-grey-shadow: rgba(47, 47, 47, 0.15);
 $color-grey-font: #8f8f8f;
 $color-black: #0C1D25;
 $color-blue-1: #1F768A;
